--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:description" content="神眠`图床" />
   <meta property="og:site_name" content="神眠`图床" />
   <meta property="og:title" content="神眠`图床" />
-  <meta property="og:url" content="https://wp-cdn.4ce.cn" />
+  <meta property="og:url" content="https://zycs-img-bn1.pages.dev/" />
   <meta itemprop="image" content="/favicon.ico" />
   <link rel="icon" href="/favicon.ico" />
 </head>
